--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -10,10 +10,8 @@
                 <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"> 
                         <img src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112" width="452"> 
                     </a> </h1> 
-            </div>             
-            <div id="column"> 
-                <div id="column_left"> 
-                    <table style="width: 652px; height: 106px;" border="0"> 
+
+                    <table border="0"> 
                         <tbody> 
                             <tr> 
                                 <td><b> <a href="./../school/index.html"> 
@@ -26,7 +24,7 @@
                                     <a href="./../counseling/index.html"> 
                                         <img src="../image/yoko_ue_3.PNG" alt="相談カウンセリング" onmouseover="this.src='../image/yoko_sita_3.PNG'" onmouseout="this.src='../image/yoko_ue_3.PNG'"> 
                                     </a>                                     
-                                </td>                                 
+                                </td>                                
                                 <td><b> <a href="./../circle/index.html"> 
                                             <img src="../image/yoko_ue_4.PNG" alt="自立支援サークル" onmouseover="this.src='../image/yoko_sita_4.PNG'" onmouseout="this.src='../image/yoko_ue_4.PNG'"> 
                                         </a> </b></td> 
@@ -41,7 +39,18 @@
                                         </a> </b></td> 
                             </tr>                             
                         </tbody>                         
-                    </table>                     
+                    </table>
+
+
+
+
+
+
+
+            </div>             
+            <div id="column"> 
+                <div id="column_left"> 
+                                         
                     &nbsp;
                     <!-- 原稿-->                     &lt;%= @page.get_index() %&gt;
                     <!-- 原稿-->                     
