--- a/Config/template/index/footer.html
+++ b/Config/template/index/footer.html
@@ -3,10 +3,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link href="./../image/common.css" rel="stylesheet" type="text/css">
   </head>
-  <body><h<html>
-      <link href="./../image/common.css" rel="stylesheet" type="text/css">
-    </h<html>
-    <div id="foot_wrapper">
+  <body>
+     <div id="foot_wrapper">
       <div id="footer">
         <dl>
           <dt>CSスクール</dt>
@@ -23,7 +21,8 @@
           <li><a href="../sitemap/index.html" target="_parent">サイトマップ</a></li>
           <li><a href="../contact/index.html" target="_parent">お問合せ</a></li>
         </ul>
-        <p><img src="./../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
+        <p><img src="./../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
+
             width="256"> </p>
       </div>
     </div>
