--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -10,48 +10,40 @@
                 <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"> 
                         <img src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112" width="452"> 
                     </a> </h1> 
-
-                    <table border="0"> 
-                        <tbody> 
-                            <tr> 
-                                <td><b> <a href="./../school/index.html"> 
-                                            <img src="../image/yoko_ue_1.PNG" alt="職業訓練CSサークル" onmouseover="this.src='../image/yoko_sita_1.PNG'" onmouseout="this.src='../image/yoko_ue_1.PNG'"> 
-                                        </a> </b></td> 
-                                <td><b> <a href="./../pasokonn/index.html"> 
-                                            <img src="../image/yoko_ue_2.PNG" alt="パソコンなら青年お助け隊" onmouseover="this.src='../image/yoko_sita_2.PNG'" onmouseout="this.src='../image/yoko_ue_2.PNG'"> 
-                                        </a> </b></td> 
-                                <td> 
-                                    <a href="./../counseling/index.html"> 
-                                        <img src="../image/yoko_ue_3.PNG" alt="相談カウンセリング" onmouseover="this.src='../image/yoko_sita_3.PNG'" onmouseout="this.src='../image/yoko_ue_3.PNG'"> 
-                                    </a></td>                                
-                                <td><b> <a href="./../circle/index.html"> 
-                                            <img src="../image/yoko_ue_4.PNG" alt="自立支援サークル" onmouseover="this.src='../image/yoko_sita_4.PNG'" onmouseout="this.src='../image/yoko_ue_4.PNG'"> 
-                                        </a> </b></td> 
-                                <td><b> <a href="./../outline/index.html"> 
-                                            <img src="../image/yoko_ue_5.PNG" alt="団体概要" onmouseover="this.src='../image/yoko_sita_5.PNG'" onmouseout="this.src='../image/yoko_ue_5.PNG'"> 
-                                        </a> </b></td> 
-                                <td><b><a href="./../admission/index.html"> </a> <a href="./../admission/index.html"> 
-                                            <img src="../image/yoko_ue_6.PNG" alt="ご支援入会ご案内" onmouseover="this.src='../image/yoko_sita_6.PNG'" onmouseout="this.src='../image/yoko_ue_6.PNG'"> 
-                                        </a> <a href="./../outline/index.html"> </a> </b></td> 
-                                <td><b> <a href="./../link/index.html"> 
-                                            <img src="../image/yoko_ue_7.PNG" alt="リンク集" onmouseover="this.src='../image/yoko_sita_7.PNG'" onmouseout="this.src='../image/yoko_ue_7.PNG'"> 
-                                        </a> </b></td> 
-                            </tr>                             
-                        </tbody>                         
-                    </table>
-
-
-
-
-
-
-
+                <table border="0"> 
+                    <tbody> 
+                        <tr> 
+                            <td><b> <a href="./../school/index.html"> 
+                                        <img src="../image/yoko_ue_1.PNG" alt="職業訓練CSサークル" onmouseover="this.src='../image/yoko_sita_1.PNG'" onmouseout="this.src='../image/yoko_ue_1.PNG'"> 
+                                    </a> </b></td> 
+                            <td><b> <a href="./../pasokonn/index.html"> 
+                                        <img src="../image/yoko_ue_2.PNG" alt="パソコンなら青年お助け隊" onmouseover="this.src='../image/yoko_sita_2.PNG'" onmouseout="this.src='../image/yoko_ue_2.PNG'"> 
+                                    </a> </b></td> 
+                            <td> 
+                                <a href="./../counseling/index.html"> 
+                                    <img src="../image/yoko_ue_3.PNG" alt="相談カウンセリング" onmouseover="this.src='../image/yoko_sita_3.PNG'" onmouseout="this.src='../image/yoko_ue_3.PNG'"> 
+                                </a>
+                            </td>                             
+                            <td><b> <a href="./../circle/index.html"> 
+                                        <img src="../image/yoko_ue_4.PNG" alt="自立支援サークル" onmouseover="this.src='../image/yoko_sita_4.PNG'" onmouseout="this.src='../image/yoko_ue_4.PNG'"> 
+                                    </a> </b></td> 
+                            <td><b> <a href="./../outline/index.html"> 
+                                        <img src="../image/yoko_ue_5.PNG" alt="団体概要" onmouseover="this.src='../image/yoko_sita_5.PNG'" onmouseout="this.src='../image/yoko_ue_5.PNG'"> 
+                                    </a> </b></td> 
+                            <td><b><a href="./../admission/index.html"> </a> <a href="./../admission/index.html"> 
+                                        <img src="../image/yoko_ue_6.PNG" alt="ご支援入会ご案内" onmouseover="this.src='../image/yoko_sita_6.PNG'" onmouseout="this.src='../image/yoko_ue_6.PNG'"> 
+                                    </a> <a href="./../outline/index.html"> </a> </b></td> 
+                            <td><b> <a href="./../link/index.html"> 
+                                        <img src="../image/yoko_ue_7.PNG" alt="リンク集" onmouseover="this.src='../image/yoko_sita_7.PNG'" onmouseout="this.src='../image/yoko_ue_7.PNG'"> 
+                                    </a> </b></td> 
+                        </tr>                         
+                    </tbody>                     
+                </table>                 
             </div>             
             <div id="column"> 
                 <div id="column_left"> 
-                                         
                     &nbsp;
-                    <!-- 原稿-->                     &lt;%= @page.get_index() %&gt;
+                    <!-- 原稿-->                                         &lt;%= @page.get_index() %&gt;
                     <!-- 原稿-->                     
                     <div id="index_bottom_news"> 
                         <div id="index_news"> 
@@ -61,26 +53,21 @@
                 </div>                 
                 <div id="column_right"> 
                     <!--サイドメニューここから-->                     
-
                     <br> 
                     <div id="banner_zone"> 
                         <div id="banner_hikikomori"> 
                             <a href="./../kazokukai/index.html" target="_parent"> 
                                 <img src="../image/menu_1.PNG" alt="2019年家族の会"> 
                             </a>                             
-
                             <a href="./../honninkai/index.html" target="_parent"> 
                                 <img src="../image/menu_2.PNG" alt="2019年自立支援サークル"> 
                             </a>                             
-
                             <a href="./../chukansyurou/index.html" target="_parent"> 
                                 <img src="./../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等"> 
                             </a>                             
-
                             <a href="http://cscnara.blog.jp/" target="_top"> 
                                 <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"> 
                             </a>                             
-
                             <a href="http://workwaku.ksaka.net/" target="_top"> 
                                 <img src="./../image/menu_6.PNG" alt="わーく・ワク"> 
                             </a>                             
@@ -96,10 +83,9 @@
             参加者募集中</a> 
                     <a href="./../Questionnaire/index.html" target="_blank">貴社が求める人材に関するアンケートお願い</a> 
                     <img src="./../image/side_title.jpg" alt="CSスクール" height="109" width="240"> 
-                    
-                    <a href="./../school/index.html" target="_parent"><br>本部・橿原新ノ口校</a><br> 
+                    <a href="./../school/index.html" target="_parent"><br>本部・橿原新ノ口校</a>
+                    <br> 
                     パソコンのトラブル 相談はこちらへ 
-
                     <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"> 
                         <img src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"> 
                     </a>                     
