--- a/Config/template/honninkai/index.html
+++ b/Config/template/honninkai/index.html
@@ -1,12 +1,15 @@
 <!--<img src="./../image/3_imege_2.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
---><html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link href="./../image/common.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <div class="imgcenter"> <a href="../image/3_image_2.pdf" target="_parent"><img
-          src="./../image/3_imege_2.png" alt="平成30年ひきこもりセミナー" style="width: 700px; height: 991px;">
-      </a></div>
-  </body>
+-->
+<html> 
+    <head> 
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
+    </head>     
+    <body> 
+        <div class="imgcenter"> 
+            <a href="../image/3_image_2.pdf" target="_parent">
+                <img src="./../image/3_imege_2.png" alt="平成30年ひきこもりセミナー" style="width: 700px; height: 991px;"> 
+            </a>
+        </div>         
+    </body>     
 </html>
