--- a/Config/template/index/index.html
+++ b/Config/template/index/index.html
@@ -1,16 +1,16 @@
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  </head>
-  <body>
-    <div class="top_message" id="con_wrapper">
-      <h4 class="letter_title">■ニート・ひきこもりの方の就職を応援します！</h4>
-      <p></p>
-      <br>
-      <p>現在、奈良県委託事業として、ひきこもり当事者への居場所提供型支援事業や若年就職困難者職場実習等サポート事業を実施しています。奈良県
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    </head>
+    <body>
+        <div class="top_message" id="con_wrapper">
+            <h4 class="letter_title">■ニート・ひきこもりの方の就職を応援します！</h4>
+            <p></p>
+            <br>
+            <p>現在、奈良県委託事業として、ひきこもり当事者への居場所提供型支援事業や若年就職困難者職場実習等サポート事業を実施しています。奈良県
         内の方で、ニート・ひきこもり状態からの自立を目指される皆様をサポートしています。 お気軽にお問い合わせください。 <br>
         npo-cscnara@celery.ocn.ne.jp</p>
-      <p class="long_padding">卒業年ごとに求人倍率が変動し新卒入社が難しくなっている一方、<br>
+            <p class="long_padding">卒業年ごとに求人倍率が変動し新卒入社が難しくなっている一方、<br>
         １年以内で辞める新入社員の数も高い水準で推移しています。<br>
         また、二―トやフリータ―の数も一向に減ってきません。 <br>
         若者に対する雇用環境は必ずしも好転しているとは言い難いですね。<br>
@@ -20,11 +20,10 @@
         表す言葉ではないでしょうか。<br>
         年齢を問わず働き手のみなさんは、<br>
         「まだまだ将来が見えてこない！このままでいいのだろうか？」と<br>
-        不安な毎日を過ごされておられるのではないでしょうか?<br>
-        <br>
+        不安な毎日を過ごされておられるのではないでしょうか?<br> <br>
         私たちは、こういった方たちの“すてきな、あした”を実現するお手伝いをしています。</p>
-      <p class="goto_outline"><a href="http://cscnara.ksaka.net/outline.html" target="_parent">つ
+            <p class="goto_outline"><a href="http://cscnara.ksaka.net/outline.html" target="_parent">つ
           づきはこちらから</a></p>
-    </div>
-  </body>
+        </div>
+    </body>
 </html>
