ヘッダ整理

--- a/Config/template/index/body.html
+++ b/Config/template/index/body.html
@@ -43,7 +43,7 @@
             <div id="column"> 
                 <div id="column_left"> 
                     &nbsp;
-                    <!-- 原稿-->                                         &lt;%= @page.get_index() %&gt;
+                    <!-- 原稿-->                                                             &lt;%= @page.get_index() %&gt;
                     <!-- 原稿-->                     
                     <div id="index_bottom_news"> 
                         <div id="index_news"> 
@@ -54,26 +54,22 @@
                 <div id="column_right"> 
                     <!--サイドメニューここから-->                     
                     <br> 
-                    <div id="banner_zone"> 
-                        <div id="banner_hikikomori"> 
-                            <a href="./../kazokukai/index.html" target="_parent"> 
-                                <img src="../image/menu_1.PNG" alt="2019年家族の会"> 
-                            </a>                             
-                            <a href="./../honninkai/index.html" target="_parent"> 
-                                <img src="../image/menu_2.PNG" alt="2019年自立支援サークル"> 
-                            </a>                             
-                            <a href="./../chukansyurou/index.html" target="_parent"> 
-                                <img src="./../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等"> 
-                            </a>                             
-                            <a href="http://cscnara.blog.jp/" target="_top"> 
-                                <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！"> 
-                            </a>                             
-                            <a href="http://workwaku.ksaka.net/" target="_top"> 
-                                <img src="./../image/menu_6.PNG" alt="わーく・ワク"> 
-                            </a>                             
-                            <a href="./../kazokukai/index.html" target="_parent"></a> 
-                        </div>                         
-                    </div>                     
+                    <a href="../kazokukai/index.html"> 
+                        <img src="../image/menu_1.PNG" alt="2019年家族の会" onmouseover="this.src='../image/menu_sita_1.PNG'" onmouseout="this.src='../image/menu_1.PNG'"> 
+                    </a>
+                    <a href="../honninkai/index.html"> 
+                        <img src="../image/menu_2.PNG" alt="2019年自立支援サークル" onmouseover="this.src='../image/menu_sita_2.PNG'" onmouseout="this.src='../image/menu_2.PNG'"> 
+                    </a>
+                    <a href="../chukansyurou/index.html"> 
+                        <img src="../image/menu_3.PNG" alt="2019年若年就職困難者職場実習等" onmouseover="this.src='../image/menu_sita_3.PNG'" onmouseout="this.src='../image/menu_3.PNG'"> 
+                    </a>
+                    <a href="http://cscnara.blog.jp/"> 
+                        <img src="./../image/menu_5.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_5.PNG'" onmouseout="this.src='./../image/menu_5.PNG'"> 
+                    </a>
+                    <a href="http://workwaku.ksaka.net/"> 
+                        <img src="./../image/menu_6.PNG" alt="わーく・ワク" onmouseover="this.src='../image/menu_sita_6.PNG'" onmouseout="this.src='./../image/menu_6.PNG'"> 
+                    </a>
+                    <a href="../kazokukai/index.html" target="_parent"></a> 
                     <p><a href="http://cspgschool.blog.jp/" target="_top"></a></p> 
                     <a href="./../chukansyurou/index.html">奈良県委託『若年就職困難者職場実習等ｻﾎﾟｰﾄ事業』<br> 
             15～39才で就職に不安を抱える未就労者の方へのサポート事業です<br> 
@@ -86,9 +82,9 @@
                     <a href="./../school/index.html" target="_parent"><br>本部・橿原新ノ口校</a>
                     <br> 
                     パソコンのトラブル 相談はこちらへ 
-                    <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"> 
-                        <img src="./../image/menu_7.PNG" alt="パソコンなら青年お助け隊"> 
-                    </a>                     
+                    <a href="http://otasuke6776.web.fc2.com/index.html"> 
+                        <img src="./../image/menu_7.PNG" alt="ニート・ひきこもりから脱出しよう！！" onmouseover="this.src='../image/menu_sita_7.PNG'" onmouseout="this.src='./../image/menu_7.PNG'"> 
+                    </a>
                 </div>                 
                 <!-- サイドメニューここまで -->                 
             </div>             
