--- a/Config/template/index/footer.html
+++ b/Config/template/index/footer.html
@@ -4,6 +4,7 @@
         <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
     </head>     
     <body> 
+        <footer>
         <div id="foot_wrapper"> 
             <div id="footer"> 
                 <dl> 
@@ -41,5 +42,6 @@
             </div>             
         </div>         
         <p style="text-align: center">&lt;%= Time.now.strftime("%Y-%m-%d %H:%M:%S (%A)") %&gt;</p> 
+    </footer>
     </body>     
 </html>
