--- a/Config/template/index/nav.html
+++ b/Config/template/index/nav.html
@@ -2,25 +2,23 @@
 <html>
 <body>
         <header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        </header>
+        <nav>
 
 
 
 
             
-            </header>
+
+
+
+
+
+
+
+
+
+
+        </nav>
 </body>
 </html>
