--- a/Config/template/Hinagata/head.html
+++ b/Config/template/Hinagata/head.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html><head>
+<html>
+    <head>
 <meta charset = "utf-8">
 <meta name="name" content="content">
 <meta http-equiv="Content-Style-Type" content="text/css">
@@ -53,5 +54,10 @@ margin-left: 0px !important;
 
 </head>
 <body>
+    <header></header>
+    <nav></nav>
+    <article></article>
+    <aside></aside>
+    <footer></footer>
 </body>
 </html>
