--- a/Config/template/index/article.html
+++ b/Config/template/index/article.html
@@ -1,14 +1,31 @@
-<html> 
+<!doctype html>
+<html>
     <head> 
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
-        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
-    </head>     
-    <body> 
+            <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+            <link href="./../image/common.css" rel="stylesheet" type="text/css">
+        </head>
+        <body> 
+    <header> 
+ 
+    </header>
+    
 
             <div id="column"> 
                 <div id="column_left"> 
                     <!-- 原稿-->
+
+
+
+
+
                     &lt;%= @page.get_index() %&gt;
+
+
+
+
+
+
+                    
                     <!-- 原稿-->                     
 
     </body>     
