--- a/Config/template/Hinagata/nav.html
+++ b/Config/template/Hinagata/nav.html
@@ -1,11 +1,13 @@
-<!doctype html>
-<html>
-<body>
-        <header>
-        </header>
+<!doctype html> 
+<html> 
+    <head> 
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
+    </head>     
+    <body> 
+        <header></header>         
         <nav>
-
-
+                <-- 記入 -->
 
 
             
@@ -17,8 +19,12 @@
 
 
 
+                <-- 記入 -->
 
-
-        </nav>
-</body>
+        </nav>         
+        <article> 
+        </article>         
+        <aside></aside>         
+        <footer></footer>         
+    </body>     
 </html>
