--- a/Config/template/Hinagata/header.html
+++ b/Config/template/Hinagata/header.html
@@ -2,7 +2,7 @@
 <html>
 <body>
         <header>
-
+ 
 
 
 
@@ -23,4 +23,33 @@
             
             </header>
 </body>
+</html>
+
+
+
+
+<!doctype html> 
+<html> 
+    <head> 
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
+    </head>     
+    <body> 
+        <header>
+            <-- ボディの中のヘッダー -->
+
+
+
+
+
+
+
+            <-- ボディの中のヘッダー終了 -->
+        </header>         
+        <nav></nav>         
+        <article> 
+        </article>         
+        <aside></aside>         
+        <footer></footer>         
+    </body>     
 </html>
