動くようになった。

--- a/template/html.html
+++ b/template/html.html
@@ -1,23 +1,23 @@
 <!doctype html> 
 <html> 
     <head> 
-        <%= @page.get_head() %> 
+        <%= @head %> 
     </head>     
     <body> 
         <header>
-            <%= @page.get_header() %>
+            <%= @header %>
         </header>         
         <nav>
-            <%= @page.get_nav() %>
+            <%= @nav %>
         </nav>         
         <article>
-            <%= @page.get_article() %>
+            <%= @article %>
         </article>         
         <aside>
-            <%= @page.get_aside() %>
+            <%= @aside %>
         </aside>         
         <footer>
-            <%= @page.get_footer() %>
+            <%= @footer %>
         </footer>         
     </body>     
 </html>
