--- a/template/html.html
+++ b/template/html.html
@@ -11,7 +11,7 @@
             <%= @nav %>
         </nav>         
         <article>
-            <%= @article %>
+            <%= self.get_article() %>
         </article>         
         <aside>
             <%= @aside %>
