--- a/template/header.html
+++ b/template/header.html
@@ -6,8 +6,30 @@
     </head>     
     <body> 
         <header> 
-            <-- ボディの中のヘッダー --> 
-                <-- ボディの中のヘッダー終了 --> 
+            <!-- ボディの中のヘッダー -->
+            <dvi class="page">
+                <div id="wrapper"> 
+                    <div id="header">
+                        <h1 id="title"> <a href="index.html" target="_parent">
+                                <img src="../image/main_logo.jpg" width="452" height="112" alt="NPO法人キャリアサポートセンター奈良"/>
+                            </a> </h1>
+                        <div id="right">
+                            <ul>
+                                <li id="">
+                                    <a href="index.html">トップページ</a>
+                                </li>
+                                <br>
+                                <li id="">
+                                    <a href="contact.html">お問い合わせ</a>
+                                </li>
+                            </ul>
+                            <p>本部：橿原新ノ口校<br/>
+        奈良県橿原市葛本町307-12　アメニティ24-20A<br/>
+        TEL&amp;FAX:0744-29-6776<br/>
+        メールアドレス : npo-cscnara@celery.ocn.ne.jp</p>
+                        </div>
+                        <h2>求職者支援訓練、パソコンの技術提供、指導を通じて、就業のあらゆる問題をサポートします。</h2>
+                        <!-- ボディの中のヘッダー終了 -->                         
         </header>         
         <nav></nav>         
         <article> 
