プログラム完成　V2

--- a/template/head.html
+++ b/template/head.html
@@ -13,10 +13,10 @@
 <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
 <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
 <link href="./../image/common.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="./../images/favicon.ico">
+<link rel="shortcut icon" href="./../image/favicon.ico">
 
 <!--- アクセス解析
-<script type="text/javascript" async="" src="./../images/ga.js"></script><script type="text/javascript">
+<script type="text/javascript" async="" src="./../image/ga.js"></script><script type="text/javascript">
 
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-23234148-1']);
