--- a/template/nav.html
+++ b/template/nav.html
@@ -8,6 +8,35 @@
         <header></header>         
         <nav> 
             <!-- nav要素 --> 
+            <table border="0" id="column_left"> 
+                    <tbody> 
+                        <tr> 
+                            <td><b> <a href="./../school/index.html"> 
+                                        <img src="../image/yoko_ue_1.PNG" alt="職業訓練CSサークル" onmouseover="this.src='../image/yoko_sita_1.PNG'" onmouseout="this.src='../image/yoko_ue_1.PNG'"> 
+                                    </a> </b></td> 
+                            <td><b> <a href="./../pasokonn/index.html"> 
+                                        <img src="../image/yoko_ue_2.PNG" alt="パソコンなら青年お助け隊" onmouseover="this.src='../image/yoko_sita_2.PNG'" onmouseout="this.src='../image/yoko_ue_2.PNG'"> 
+                                    </a> </b></td> 
+                            <td> 
+                                <a href="./../counseling/index.html"> 
+                                    <img src="../image/yoko_ue_3.PNG" alt="相談カウンセリング" onmouseover="this.src='../image/yoko_sita_3.PNG'" onmouseout="this.src='../image/yoko_ue_3.PNG'"> 
+                                </a>
+                            </td>                             
+                            <td><b> <a href="./../circle/index.html"> 
+                                        <img src="../image/yoko_ue_4.PNG" alt="自立支援サークル" onmouseover="this.src='../image/yoko_sita_4.PNG'" onmouseout="this.src='../image/yoko_ue_4.PNG'"> 
+                                    </a> </b></td> 
+                            <td><b> <a href="./../outline/index.html"> 
+                                        <img src="../image/yoko_ue_5.PNG" alt="団体概要" onmouseover="this.src='../image/yoko_sita_5.PNG'" onmouseout="this.src='../image/yoko_ue_5.PNG'"> 
+                                    </a> </b></td> 
+                            <td><b><a href="./../admission/index.html"> </a> <a href="./../admission/index.html"> 
+                                        <img src="../image/yoko_ue_6.PNG" alt="ご支援入会ご案内" onmouseover="this.src='../image/yoko_sita_6.PNG'" onmouseout="this.src='../image/yoko_ue_6.PNG'"> 
+                                    </a> <a href="./../outline/index.html"> </a> </b></td> 
+                            <td><b> <a href="./../link/index.html"> 
+                                        <img src="../image/yoko_ue_7.PNG" alt="リンク集" onmouseover="this.src='../image/yoko_sita_7.PNG'" onmouseout="this.src='../image/yoko_ue_7.PNG'"> 
+                                    </a> </b></td> 
+                        </tr>                         
+                    </tbody>                     
+                </table>
             <!-- nav要素 --> 
         </nav>         
         <article> 
