--- a/template/aside.html
+++ b/template/aside.html
@@ -10,6 +10,9 @@
         <article> 
 </article>         
         <aside> 
+        <div class="reset"></div>
+
+<div class="left1">
             <div id="column_right"> 
                 <!--サイドメニューここから-->                 
                 <br> 
