--- a/template/head.html
+++ b/template/head.html
@@ -44,6 +44,18 @@ border-radius: 4px !important;
 
 .en-markup-crop-options div div:first-of-type {
 margin-left: 0px !important;
+
+         .reset{
+              clear: both;
+               }
+         .left1{
+              width: 20%;
+              float: left;
+              }
+         .left2{
+              width: 80%;
+              float: left;
+              }
 }
 
 
