--- a/template/html.html
+++ b/template/html.html
@@ -11,10 +11,14 @@
             <%= @nav %>
         </nav>         
         <article>
+         <div class="left2">
             <%= self.get_article() %>
+            </div>
         </article>         
         <aside>
+        <div class="left1">
             <%= @aside %>
+            </div>
         </aside>         
         <footer>
             <%= @footer %>
