--- a/template/head.html
+++ b/template/head.html
@@ -1,21 +1,21 @@
-<!doctype html>
-<html>
-<head>
-<meta charset = "utf-8">
-<meta name="name" content="content">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<meta http-equiv="Content-Script-Type" content="text/javascript">
-<meta http-equiv="Last-Modified" content="<%= Time.now().strftime("%Y-%m-%d %H:%M:%S (%A)") %> GMT">
-<meta name="keywords" content="<%= @keyword %> ">
-<meta name="description" content="<%= @page.get_description() %>">
-
-<title><%= @page.get_title() %></title>
-<link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
-<link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
-<link href="./../image/common.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="./../image/favicon.ico">
-
-<!--- アクセス解析
+<!doctype html> 
+<html> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta name="name" content="content"> 
+        <meta http-equiv="Content-Style-Type" content="text/css"> 
+        <meta http-equiv="Content-Script-Type" content="text/javascript"> 
+        <meta http-equiv="Last-Modified" content="<%= Time.now().strftime("%Y-%m-%d %H:%M:%S (%A)") %> GMT"> 
+        <meta name="keywords" content="<%= @keyword %> "> 
+        <meta name="description" content="<%= @page.get_description() %>"> 
+        <title>
+            <%= @page.get_title() %>
+        </title>         
+        <link rel="stylesheet" type="text/css" href="./../image/reset-min.css"> 
+        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css"> 
+        <link href="./../image/common.css" rel="stylesheet" type="text/css"> 
+        <link rel="shortcut icon" href="./../image/favicon.ico"> 
+        <!--- アクセス解析
 <script type="text/javascript" async="" src="./../image/ga.js"></script><script type="text/javascript">
 
 var _gaq = _gaq || [];
@@ -29,47 +29,29 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 })();
 
 </script>
-おわり-->
-
-
-<style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
+おわり-->         
+        <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
-top: 18px !important;
-left: 50% !important;
-margin-left: -100px !important;
-width: 200px !important;
-border: 2px rgba(255,255,255,.38) solid !important;
-border-radius: 4px !important;
+    top: 18px !important;
+    left: 50% !important;
+    margin-left: -100px !important;
+    width: 200px !important;
+    border: 2px rgba(255,255,255,.38) solid !important;
+    border-radius: 4px !important;
 }
 
 .en-markup-crop-options div div:first-of-type {
-margin-left: 0px !important;
-
-         .reset{
-              clear: both;
-               }
-         .left1{
-              width: 20%;
-              float: left;
-              }
-         .left2{
-              width: 80%;
-              float: left;
-              }
-}
-
-
-</style>
-
-
-<title><%= @config.home_title %></title>
-
-</head>
-<body>
-    <header></header>
-    <nav></nav>
-    <article></article>
-    <aside></aside>
-    <footer></footer>
-</body>
+    margin-left: 0px !important;
+}</style>         
+        <title>
+            <%= @config.home_title %>
+        </title>         
+    </head>     
+    <body> 
+        <header></header>         
+        <nav></nav>         
+        <article></article>         
+        <aside></aside>         
+        <footer></footer>         
+    </body>     
 </html>
